--- a/app/src/main/res/layout/activity_robot.xml
+++ b/app/src/main/res/layout/activity_robot.xml
@@ -40,4 +40,14 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_marginBottom="60dp" />
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@android:drawable/ic_lock_power_off"
+        android:layout_below="@+id/imageView"
+        android:layout_alignRight="@+id/imageView"
+        android:layout_alignEnd="@+id/imageView"
+        android:layout_marginTop="31dp"
+        android:id="@+id/imageButtonSalir" />
 </RelativeLayout>
